--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "axios": "^1.9.0",
     "cors": "^2.8.5",
@@ -20,5 +19,18 @@
     "qrcode": "^1.5.4",
     "qrcode-terminal": "^0.12.0",
     "whatsapp-web.js": "^1.27.0"
-  }
+  },
+  "devDependencies": {
+    "@prisma/client": "^6.9.0",
+    "prisma": "^6.9.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/atharva-banasure-selldo/Node-Personal-Whatsapp.git"
+  },
+  "bugs": {
+    "url": "https://github.com/atharva-banasure-selldo/Node-Personal-Whatsapp/issues"
+  },
+  "homepage": "https://github.com/atharva-banasure-selldo/Node-Personal-Whatsapp#readme",
+  "description": ""
 }
