--- a/package.json
+++ b/package.json
@@ -1,243 +1,25 @@
 {
-  "name": "whatsapp",
+  "name": "personal-whatsapp",
+  "description": "This is personal whatsApp server allowing users to connect their whatsApp accounts.",
   "version": "1.0.0",
   "main": "index.js",
-  "dependencies": {
-    "accepts": "^2.0.0",
-    "agent-base": "^6.0.2",
-    "ansi-regex": "^5.0.1",
-    "ansi-styles": "^4.3.0",
-    "archiver": "^5.3.2",
-    "archiver-utils": "^2.1.0",
-    "async": "^3.2.6",
-    "asynckit": "^0.4.0",
-    "axios": "^1.9.0",
-    "balanced-match": "^1.0.2",
-    "base64-js": "^1.5.1",
-    "big-integer": "^1.6.52",
-    "binary": "^0.3.0",
-    "bl": "^4.1.0",
-    "bluebird": "^3.4.7",
-    "body-parser": "^2.2.0",
-    "brace-expansion": "^1.1.11",
-    "bson": "^6.10.4",
-    "buffer": "^5.7.1",
-    "buffer-crc32": "^0.2.13",
-    "buffer-indexof-polyfill": "^1.0.2",
-    "buffers": "^0.1.1",
-    "bytes": "^3.1.2",
-    "call-bind-apply-helpers": "^1.0.2",
-    "call-bound": "^1.0.4",
-    "camelcase": "^5.3.1",
-    "chainsaw": "^0.1.0",
-    "chownr": "^1.1.4",
-    "cliui": "^6.0.0",
-    "color-convert": "^2.0.1",
-    "color-name": "^1.1.4",
-    "combined-stream": "^1.0.8",
-    "compress-commons": "^4.1.2",
-    "concat-map": "^0.0.1",
-    "content-disposition": "^1.0.0",
-    "content-type": "^1.0.5",
-    "cookie": "^0.7.2",
-    "cookie-signature": "^1.2.2",
-    "core-util-is": "^1.0.3",
-    "cors": "^2.8.5",
-    "crc-32": "^1.2.2",
-    "crc32-stream": "^4.0.3",
-    "cross-fetch": "^3.1.5",
-    "debug": "^4.4.1",
-    "decamelize": "^1.2.0",
-    "delayed-stream": "^1.0.0",
-    "depd": "^2.0.0",
-    "devtools-protocol": "^0.0.1045489",
-    "dijkstrajs": "^1.0.3",
-    "dotenv": "^16.5.0",
-    "dunder-proto": "^1.0.1",
-    "duplexer2": "^0.1.4",
-    "ee-first": "^1.1.1",
-    "emoji-regex": "^8.0.0",
-    "encodeurl": "^2.0.0",
-    "end-of-stream": "^1.4.4",
-    "es-define-property": "^1.0.1",
-    "es-errors": "^1.3.0",
-    "es-object-atoms": "^1.1.1",
-    "es-set-tostringtag": "^2.1.0",
-    "escape-html": "^1.0.3",
-    "etag": "^1.8.1",
-    "express": "^5.1.0",
-    "extract-zip": "^2.0.1",
-    "fd-slicer": "^1.1.0",
-    "finalhandler": "^2.1.0",
-    "find-up": "^4.1.0",
-    "fluent-ffmpeg": "^2.1.2",
-    "follow-redirects": "^1.15.9",
-    "form-data": "^4.0.3",
-    "forwarded": "^0.2.0",
-    "fresh": "^2.0.0",
-    "fs-constants": "^1.0.0",
-    "fs-extra": "^10.1.0",
-    "fs.realpath": "^1.0.0",
-    "fstream": "^1.0.12",
-    "function-bind": "^1.1.2",
-    "get-caller-file": "^2.0.5",
-    "get-intrinsic": "^1.3.0",
-    "get-proto": "^1.0.1",
-    "get-stream": "^5.2.0",
-    "glob": "^7.2.3",
-    "gopd": "^1.2.0",
-    "graceful-fs": "^4.2.11",
-    "has-symbols": "^1.1.0",
-    "has-tostringtag": "^1.0.2",
-    "hasown": "^2.0.2",
-    "http-errors": "^2.0.0",
-    "https-proxy-agent": "^5.0.1",
-    "iconv-lite": "^0.6.3",
-    "ieee754": "^1.2.1",
-    "inflight": "^1.0.6",
-    "inherits": "^2.0.4",
-    "ipaddr.js": "^1.9.1",
-    "is-fullwidth-code-point": "^3.0.0",
-    "is-promise": "^4.0.0",
-    "isarray": "^1.0.0",
-    "isexe": "^2.0.0",
-    "jsonfile": "^6.1.0",
-    "kareem": "^2.6.3",
-    "lazystream": "^1.0.1",
-    "listenercount": "^1.0.1",
-    "locate-path": "^5.0.0",
-    "lodash.defaults": "^4.2.0",
-    "lodash.difference": "^4.5.0",
-    "lodash.flatten": "^4.4.0",
-    "lodash.isplainobject": "^4.0.6",
-    "lodash.union": "^4.6.0",
-    "math-intrinsics": "^1.1.0",
-    "media-typer": "^1.1.0",
-    "memory-pager": "^1.5.0",
-    "merge-descriptors": "^2.0.0",
-    "mime": "^3.0.0",
-    "mime-db": "^1.54.0",
-    "mime-types": "^3.0.1",
-    "minimatch": "^3.1.2",
-    "minimist": "^1.2.8",
-    "mkdirp": "^0.5.6",
-    "mkdirp-classic": "^0.5.3",
-    "mongodb": "^6.16.0",
-    "mongodb-connection-string-url": "^3.0.2",
-    "mongoose": "^8.15.1",
-    "mpath": "^0.9.0",
-    "mquery": "^5.0.0",
-    "ms": "^2.1.3",
-    "negotiator": "^1.0.0",
-    "node-fetch": "^2.7.0",
-    "node-webpmux": "^3.1.7",
-    "normalize-path": "^3.0.0",
-    "object-assign": "^4.1.1",
-    "object-inspect": "^1.13.4",
-    "on-finished": "^2.4.1",
-    "once": "^1.4.0",
-    "p-limit": "^2.3.0",
-    "p-locate": "^4.1.0",
-    "p-try": "^2.2.0",
-    "parseurl": "^1.3.3",
-    "path-exists": "^4.0.0",
-    "path-is-absolute": "^1.0.1",
-    "path-to-regexp": "^8.2.0",
-    "pend": "^1.2.0",
-    "pg": "^8.16.0",
-    "pg-cloudflare": "^1.2.5",
-    "pg-connection-string": "^2.9.0",
-    "pg-int8": "^1.0.1",
-    "pg-pool": "^3.10.0",
-    "pg-protocol": "^1.10.0",
-    "pg-types": "^2.2.0",
-    "pgpass": "^1.0.5",
-    "pngjs": "^5.0.0",
-    "postgres-array": "^2.0.0",
-    "postgres-bytea": "^1.0.0",
-    "postgres-date": "^1.0.7",
-    "postgres-interval": "^1.2.0",
-    "process-nextick-args": "^2.0.1",
-    "progress": "^2.0.3",
-    "proxy-addr": "^2.0.7",
-    "proxy-from-env": "^1.1.0",
-    "pump": "^3.0.2",
-    "punycode": "^2.3.1",
-    "puppeteer": "^18.2.1",
-    "puppeteer-core": "^18.2.1",
-    "qrcode": "^1.5.4",
-    "qrcode-terminal": "^0.12.0",
-    "qs": "^6.14.0",
-    "range-parser": "^1.2.1",
-    "raw-body": "^3.0.0",
-    "readable-stream": "^3.6.2",
-    "readdir-glob": "^1.1.3",
-    "require-directory": "^2.1.1",
-    "require-main-filename": "^2.0.0",
-    "rimraf": "^3.0.2",
-    "router": "^2.2.0",
-    "safe-buffer": "^5.2.1",
-    "safer-buffer": "^2.1.2",
-    "send": "^1.2.0",
-    "serve-static": "^2.2.0",
-    "set-blocking": "^2.0.0",
-    "setimmediate": "^1.0.5",
-    "setprototypeof": "^1.2.0",
-    "side-channel": "^1.1.0",
-    "side-channel-list": "^1.0.0",
-    "side-channel-map": "^1.0.1",
-    "side-channel-weakmap": "^1.0.2",
-    "sift": "^17.1.3",
-    "sparse-bitfield": "^3.0.3",
-    "split2": "^4.2.0",
-    "statuses": "^2.0.2",
-    "string-width": "^4.2.3",
-    "string_decoder": "^1.3.0",
-    "strip-ansi": "^6.0.1",
-    "tar-fs": "^2.1.1",
-    "tar-stream": "^2.2.0",
-    "through": "^2.3.8",
-    "toidentifier": "^1.0.1",
-    "tr46": "^5.1.1",
-    "traverse": "^0.3.9",
-    "type-is": "^2.0.1",
-    "unbzip2-stream": "^1.4.3",
-    "undici-types": "^6.21.0",
-    "universalify": "^2.0.1",
-    "unpipe": "^1.0.0",
-    "unzipper": "^0.10.14",
-    "util-deprecate": "^1.0.2",
-    "vary": "^1.1.2",
-    "webidl-conversions": "^7.0.0",
-    "whatsapp-web.js": "^1.30.0",
-    "whatwg-url": "^14.2.0",
-    "which": "^1.3.1",
-    "which-module": "^2.0.1",
-    "wrap-ansi": "^6.2.0",
-    "wrappy": "^1.0.2",
-    "ws": "^8.9.0",
-    "xtend": "^4.0.2",
-    "y18n": "^4.0.3",
-    "yargs": "^15.4.1",
-    "yargs-parser": "^18.1.3",
-    "yauzl": "^2.10.0",
-    "zip-stream": "^4.1.1"
-  },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon index.js",
-    "start": "node index.js"
+    "dev": "nodemon index.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/atharva-banasure-selldo/Node-Personal-Whatsapp.git"
-  },
+  "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/atharva-banasure-selldo/Node-Personal-Whatsapp/issues"
+  "dependencies": {
+    "axios": "^1.9.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
+    "mongoose": "^8.13.2",
+    "pg": "^8.15.6",
+    "qrcode": "^1.5.4",
+    "qrcode-terminal": "^0.12.0",
+    "whatsapp-web.js": "^1.27.0"
   },
-  "homepage": "https://github.com/atharva-banasure-selldo/Node-Personal-Whatsapp#readme",
-  "description": ""
+  "devDependencies": {}
 }
