--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "pg": "^8.15.6",
     "qrcode": "^1.5.4",
     "qrcode-terminal": "^0.12.0",
-    "whatsapp-web.js": "^1.27.0"
-  },
-  "devDependencies": {}
+    "whatsapp-web.js": "^1.27.0",
+    "wwebjs-mongo": "^1.1.0"
+  }
 }
